fixed alignment?

--- a/css/review.css
+++ b/css/review.css
@@ -231,7 +231,7 @@ main a {
 }
 
 #details-block p {
-   flex-shrink: 2;
+   flex-shrink: 10;
    flex-grow: 4;
 }
 
